Thu Nov 13 04:03:55 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * tests/Bug_3499_Regression/DLL_Service_Host.cpp:

          Fixed compilation errors on GCC 3.4

Wed Nov 12 20:14:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Policies/run_test.pl:
          Fixed bug in this file

Wed Nov 12 16:12:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * tests/Bug_3499_Regression/DLL_Service.mpc:

          Fixed the last Fuzz warning.

Wed Nov 12 16:02:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Naming/Naming_Server.cpp:
          Fixed compile error with CORBA/e micro

Wed Nov 12 13:10:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * tests/Bug_3499_Regression/DLL_Service.h:
        * tests/Bug_3499_Regression/DLL_TAO_Service.h:

          Fixed the Fuzz errors.

Wed Nov 12 11:11:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORB.cpp:
          Added support for -ORBGestalt CURRENT. This fixes bugzilla 3499,
          thanks to James Hill for reporting this

        * tao/Strategies/SCIOP_Endpoint.cpp:
          Unicode fix

        * tests/Bug_3499_Regression/DLL_Service.mpc:
          Layout change

        * tests/Bug_3499_Regression/DLL_Service.cpp:
        * tests/Bug_3499_Regression/DLL_Service.h:
        * tests/Bug_3499_Regression/DLL_TAO_Service.cpp:
        * tests/Bug_3499_Regression/DLL_TAO_Service.h:
          Use ACE_TCHAR

Wed Nov 12 10:49:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DevGuideExamples/AMH/MessengerClient.cpp:
        * DevGuideExamples/AMH/MessengerServer.cpp:
          Pass IOR filename through the commandline

        * DevGuideExamples/BiDirectionalGIOP/client.cpp:
        * DevGuideExamples/BiDirectionalGIOP/server.cpp:
        * DevGuideExamples/Multithreading/GracefulShutdown/MessengerClient.cpp:
        * DevGuideExamples/Multithreading/GracefulShutdown/MessengerServer.cpp: